python/tests/test_envoy_v3/acceptancegrpcwebtest/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "DevPortal": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"acceptancegrpcwebtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host-acceptancegrpcwebtest\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"acceptancegrpcwebtest\"],\"hostname\":\"*\",\"requestPolicy\":{\"insecure\":{\"action\ [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:28Z",
                    "generation": 2,
                    "labels": {
                        "kat-ambassador-id": "acceptancegrpcwebtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host-acceptancegrpcwebtest",
                    "namespace": "default",
                    "resourceVersion": "6143",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/hosts/cleartext-host-acceptancegrpcwebtest",
                    "uid": "ff6f3a3b-f91f-4be5-b027-fb5902d6378c"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "acceptancegrpcwebtest"
                    ],
                    "hostname": "*",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "acceptancegrpcwebtest"
                        }
                    },
                    "tlsSecret": {}
                },
                "status": {
                    "state": "Ready",
                    "tlsCertificateSource": "None"
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": [
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdmanualcontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdmanualcontext-manual-host-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdmanualcontext\"],\"hosts\":[\"hostcrdmanualcontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\", [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:40Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdmanualcontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdmanualcontext-manual-host-context",
                    "namespace": "default",
                    "resourceVersion": "2949",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/hostcrdmanualcontext-manual-host-context",
                    "uid": "fa19bc5d-236f-46f9-b1f1-0c10c8b2ed3f"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdmanualcontext"
                    ],
                    "hosts": [
                        "hostcrdmanualcontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdmanualcontext-manual-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdseparatetlscontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdseparatetlscontext-separate-tls-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdseparatetlscontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secret\":\"hostcrds [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:41Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdseparatetlscontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdseparatetlscontext-separate-tls-context",
                    "namespace": "default",
                    "resourceVersion": "2995",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/hostcrdseparatetlscontext-separate-tls-context",
                    "uid": "e10bdb3b-8605-4f27-8943-5767c5e99f8b"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdseparatetlscontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdseparatetlscontext-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlsinheritfrommodule\",\"scope\":\"AmbassadorTest\"},\"name\":\"tlsinheritfrommodule\",\"namespace\":\"default\"},\"spec\":{\"alpn_protocols\":\"h2,http/1.1\",\"ambassador_id\":[\"tlsinheritfrommodule\"],\"hosts\":[\"a.domain.com\"],\"secret\":\"tlsinheritfrommodule\"}}\n"
                    },
                    "creationTimestamp": "2020-12-23T17:01:08Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "tlsinheritfrommodule",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlsinheritfrommodule",
                    "namespace": "default",
                    "resourceVersion": "6438",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/tlsinheritfrommodule",
                    "uid": "d4f4da8f-82b8-4c31-b484-3effd73b669f"
                },
                "spec": {
                    "alpn_protocols": "h2,http/1.1",
                    "ambassador_id": [
                        "tlsinheritfrommodule"
                    ],
                    "hosts": [
                        "a.domain.com"
                    ],
                    "secret": "tlsinheritfrommodule"
                }
            }
        ],
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Module\nname: ambassador\nconfig:\n  enable_grpc_web: True\nambassador_id: acceptancegrpcwebtest\n\n---\napiVersion: ambassador/v0\nkind: Mapping\ngrpc: True\nprefix: /echo.EchoService/\nrewrite: /echo.EchoService/\nname: acceptancegrpcwebtest-egrpc\nservice: acceptancegrpcwebtest-egrpc\nambassador_id: acceptancegrpcwebtest\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Module\\nname: ambassador\\nconfig:\\n  enable_grpc_web: True\\nambassador_id: acceptancegrpcwebtest\\n\\n---\\napiVersion: ambassador/v0\\nkind: Mapping\\ngrpc: True\\nprefix: /echo.EchoService/\\nrewrite: /echo.EchoService/\\nname: acceptancegrpcwebtest-egrpc\\nservice: accep [...]
                    },
                    "creationTimestamp": "2020-12-23T20:38:51Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "acceptancegrpcwebtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "acceptancegrpcwebtest",
                    "namespace": "default",
                    "resourceVersion": "294679",
                    "selfLink": "/api/v1/namespaces/default/services/acceptancegrpcwebtest",
                    "uid": "c8566877-c631-422a-9506-cb9cf6fc0756"
                },
                "spec": {
                    "clusterIP": "10.43.177.173",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30211,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32757,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "acceptancegrpcwebtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"acceptancegrpcwebtest\",\"scope\":\"AmbassadorTest\",\"service\":\"acceptancegrpcwebtest-admin\"},\"name\":\"acceptancegrpcwebtest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"acceptancegrpcwebtest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"acceptancegrpcweb [...]
                    },
                    "creationTimestamp": "2020-12-23T20:38:51Z",
                    "labels": {
                        "kat-ambassador-id": "acceptancegrpcwebtest",
                        "scope": "AmbassadorTest",
                        "service": "acceptancegrpcwebtest-admin"
                    },
                    "name": "acceptancegrpcwebtest-admin",
                    "namespace": "default",
                    "resourceVersion": "294688",
                    "selfLink": "/api/v1/namespaces/default/services/acceptancegrpcwebtest-admin",
                    "uid": "5af1d4a0-6d80-4c6a-8d6f-09bb7bc9e76c"
                },
                "spec": {
                    "clusterIP": "10.43.200.34",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "acceptancegrpcwebtest-admin",
                            "nodePort": 31870,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "acceptancegrpcwebtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"acceptancegrpcwebtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"acceptancegrpcwebtest-egrpc\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8443}],\"selector\":{\"ba [...]
                    },
                    "creationTimestamp": "2020-12-23T20:38:51Z",
                    "labels": {
                        "kat-ambassador-id": "acceptancegrpcwebtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "acceptancegrpcwebtest-egrpc",
                    "namespace": "default",
                    "resourceVersion": "294701",
                    "selfLink": "/api/v1/namespaces/default/services/acceptancegrpcwebtest-egrpc",
                    "uid": "4c0f6217-9a13-48cd-89d1-ce12914459ca"
                },
                "spec": {
                    "clusterIP": "10.43.18.99",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "backend": "acceptancegrpcwebtest-egrpc"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
